updated UX to UI

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <h3 class="gtxt-small">Hello, I'm</h3>
             <h1 class="gtxt">Geneveive</h1><br>
             <hr class="shortline">
-            <p class="gtxtp">UX RESEARCHER . UX DESIGNER</p>
+            <p class="gtxtp">UX RESEARCHER . UI DESIGNER</p>
             <a href="#about" class="btn btn-outline-light" >About me</a>
             <a href="mailto:gfakunle50@gmail.com" class="btn btn-warning">Contact</a>
         </div>
